Fixed some contrast problems

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,9 @@
 :root {
-    --primary-color: #103a4eb2;
-    --secondary-color: #5b7a54;
-    --accent1-color: #c2dbf3;
-    --accent2-color: #CACF85;
+    --primary-color: #073347d8;
+    --secondary-color: #338121;
+    --accent1-color: #8fc3f3;
+    --accent2-color: #f7ff85;
+    --transparent--accent1-color: #c2dbf377; 
 }
 
 body {
@@ -218,7 +219,7 @@ footer img {
 .Contact-us-title {
     text-align: center;
     color: var(--secondary-color);
-    background-color: var(--accent1-color);
+    background-color: var();
     padding: 5px;
     margin: 1rem;
     font-family: 'Yuji Mai', serif;
@@ -227,7 +228,7 @@ footer img {
 .information {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background-color: var(--accent2-color);
+    background-color: var(--accent1-color);
     border-radius: 30px 30px 0 0;
     border: 1px solid rgba(0, 0, 0, .1);
     padding: 10px 0;
@@ -268,7 +269,7 @@ footer img {
 }
 
 .information2 {
-    background-color: var(--accent2-color);
+    background-color: var(--accent1-color);
     margin-top: -1rem;
     padding-bottom: 1rem;
     border-radius: 0 0 30px 30px;
@@ -413,4 +414,12 @@ div h1 {
 
 .next-rows {
     background-color: var(--accent2-color);
+}
+
+.color {
+    color: var(--accent1-color);
+}
+
+.color2 {
+    color: var(--accent2-color);
 }
